fixed comment line height and horizontal scroll bar

--- a/assets/css/mediaqueries-PRE-COMMENTER-LINE-HEIGHT.css
+++ b/assets/css/mediaqueries-PRE-COMMENTER-LINE-HEIGHT.css
@@ -165,8 +165,7 @@
     #namedatecomment {
         width: 67.857vw;   }    /* 19/28 cols | This should be <main>'s width in cols (22/28) minus avatar (2/28) minus space between this and avatar (2/28) = 18/28 cols */
     #postedcomment {
-        /* margin-top: calc(7.143vw - 1.85rem); */
-        margin-top: calc(7.143vw - 2.25em);    }
+        margin-top: calc(7.143vw - 1.85rem);    }
 
 }    /* 390px ++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
@@ -676,7 +675,7 @@
     #namedatecomment {
         width: 554.392px;   }    /* 19/28 cols px equivalent at 817px screenwidth | This should be <main>'s width in cols (22/28) minus avatar (2/28) minus space between this and avatar (2/28) = 18/28 cols */
     #postedcomment {
-        margin-top: calc(58.357px - 2.25em);    }
+        margin-top: calc(58.357px - 1.7646rem);    }
 
     /* COMMENT INPUT FIELD WIDTH -------------------------------------------------- */
 
@@ -1139,8 +1138,7 @@
     #namedatecomment {
         width: 554.167px;   }    /* 9/21 cols px equivalent at 1225 px screenwidth | This should be <main>'s width in cols (22/28) minus avatar (2/28) minus space between this and avatar (2/28) = 18/28 cols */
     #postedcomment {
-        margin-top: calc(58.333px - 2.25em);
-        /* margin-top: calc(58.333px - 1.7646rem); */    }
+        margin-top: calc(58.333px - 1.7646rem);    }
 
     /* COMMENT INPUT FIELD WIDTH -------------------------------------------------- */
 
